--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Mihir Manek</h4>
             <p><em>Innovative and deadline-driven Programmer, 4th year student from Institute of Computer Technology, Ganpat University currently Pursuing B.tech degree in Computer Science and Engineering specialized in Big Data Analystics </em></p>
@@ -305,7 +305,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>D-239, Kalvibid D main road, Opp. Street no. 16, Waghawadi Road, Bhavnagar-364002</p>
+            <p>Bhavnagar, Gujarat</p>
           </div>
         </div>
 
