--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1><a href="index.html">MIHIR MANEK</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Developer and Data Analyst</span> from Bhavnagar</h2>
+      <h2>I'm a passionate <span>Developer and Data Analyst</span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
