--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mihir Manek</title>
+  <title>Mihir Manek Potfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -36,7 +36,7 @@
       <h1><a href="index.html">MIHIR MANEK</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Developer and Data Analyst</span></h2>
+      <h2>I'm a passionate <span class="typed" data-typed-items="Developer, Designer, Blogger">Developer and Data Analyst</span></h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -284,8 +284,9 @@
             </p>
           </div>
         </div>
-      </div>
-
+    </div>
+    <div class="downloadCV">
+      <center> <a href="https://drive.google.com/file/d/1FNEkI2siShS8WlWAOhYi4LR6bU4CUW0F/view?usp=sharing" target="_blank"><button type="CV">Downlaod Resume</button></a></div>
     </div>
   </section><!-- End Resume Section -->
 
