--- a/index.html
+++ b/index.html
@@ -82,16 +82,15 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9th March,2001 </li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://mihir004.github.io" target="_blank" class="Website">mihir004.github.io </a></li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong><a href="tel:9879096889" target="_blank"> +919879096889 </a></li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bhavnagar, Gujarat </li>
+               <!--- <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://mihir004.github.io" target="_blank" class="Website">mihir004.github.io </a></li> -->
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong><a href="tel:9879096889" target="_blank"> +91-9879096889 </a></li>
+                <li><i class="icofont-rounded-right"></i> <strong>E-Mail:</strong><a href="mailto:mihirm004@gmail.com" target="_blank"> mihirm004@gmail.com </a></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20 </li>
                 <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.Tech in Computer Science and Engineering specialized in Big Data Analytics </li>
-                <li><i class="icofont-rounded-right"></i> <strong>E-Mail:</strong><a href="mailto:mihirm004@gmail.com" target="_blank"> mihirm004@gmail.com </a></li>
               </ul>
             </div>
           </div>
@@ -238,7 +237,7 @@
             <p>
             <ul>
               <li>Bhavnagar, Gujarat</li>
-              <li><a href="tel:9879096889" target="_blank">+919879096889</a></li>
+              <li><a href="tel:9879096889" target="_blank">+91-9879096889</a></li>
               <li><a href="mailto:mihirm004@gmail.com" target="_blank">mihirm004@gmail.com</a></li>
             </ul>
             </p>
@@ -328,14 +327,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>mihirm004@gmail.com</p>
+            <p><a href="mailto:mihirm004@gmail.com" target="_blank">mihirm004@gmail.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+91 9879096889</p>
+            <p><a href="tel:9879096889" target="_blank">+91-9879096889</a></p>
           </div>
         </div>
       </div>
